# Swarmia_MCP

./: .gitignore  NOTES.md  README.md  SECURITY.md  package.json  pnpm-lock.yaml  pyproject.toml  server.py  vite.config.mts
.github/: copilot_instructions.md
.github/skills/swarmia/: SKILL.md
.github/skills/swarmia-admin/: SKILL.md
assets/commit-hygiene/: index-Bo4xCZ2U.js  index-CTB4LQ7D.js  index-DUHV-TOO.js  index.html
assets/deployment-scaffold/: index-BcjgpVLD.js  index-D9bngF7Z.js  index-DKvLLuVu.js  index.html
assets/docs-diagnostic/: index-BlWbPUUh.js  index-BrCi8U-j.js  index-CMVboGzN.js  index-Dj9Ahdzj.js  index.html
src/commit-hygiene/: App.tsx  index.html  index.tsx
src/deployment-scaffold/: App.tsx  index.html  index.tsx
src/docs-diagnostic/: App.tsx  index.html  index.tsx
src/lib/: mcp-apps.ts
swarmia_mcp/: __init__.py  __main__.py  docs_context.md  server.py
