[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "swarmia-mcp"
version = "0.1.0"
description = "Swarmia IDE Agent — context-aware MCP server for Swarmia integration"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
swarmia-mcp = "swarmia_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["swarmia_mcp"]

[tool.hatch.build.targets.wheel.force-include]
"swarmia_mcp/docs_context.md" = "swarmia_mcp/docs_context.md"
